--- a/Connect4.html
+++ b/Connect4.html
@@ -80,6 +80,8 @@
 							black = 0;
 						}
 					}
+					red = 0;
+					black = 0;
 
 				}
 
@@ -115,6 +117,8 @@
 							black = 0;
 						}
 					}
+					red = 0;
+					black = 0;
 					horzCheck++;
 				}
 			}
